Prevent line-breaks in 'Free admission.'

--- a/main.css
+++ b/main.css
@@ -70,6 +70,7 @@ html{
 
 .free{
   font-style: italic;
+  white-space: nowrap;
 }
 
 .alerts a{
